# electronics

./: .env.sample  pyproject.toml
config/: settings.py  urls.py
network/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
network/migrations/: 0001_initial.py
products/: models.py
products/migrations/: 0001_initial.py
users/: models.py
users/management/commands/: superuser.py
users/migrations/: 0001_initial.py
